--- a/index.html
+++ b/index.html
@@ -4,73 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuevas Tendencias en Diseño Web</title>
-    <style>
-      body {
-        font-family: "Segoe UI", sans-serif;
-        margin: 0;
-        padding: 2rem;
-        background-color: #f4f4f4;
-        color: #333;
-      }
-
-      h1 {
-        text-align: center;
-        font-size: 3rem;
-        margin-bottom: 3rem;
-      }
-
-      .analisis {
-        background: #fff;
-        border-radius: 12px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        padding: 2rem;
-        margin-bottom: 2.5rem;
-      }
-
-      .analisis h2 {
-        margin-top: 0;
-        color: #1a73e8;
-      }
-
-      .imagenes {
-        display: flex;
-        gap: 1rem;
-        flex-wrap: wrap;
-        margin: 1rem 0;
-      }
-
-      .imagenes img {
-        width: 100%;
-        max-width: 300px;
-        border-radius: 8px;
-      }
-
-      .analisis a {
-        display: inline-block;
-        margin-top: 1rem;
-        background: #1a73e8;
-        color: white;
-        padding: 0.5rem 1rem;
-        text-decoration: none;
-        border-radius: 6px;
-        transition: background 0.3s;
-      }
-
-      .analisis a:hover {
-        background: #0c52c2;
-      }
-    </style>
+    <link rel="stylesheet" href="estilos.css" />
   </head>
   <body>
     <h1>NUEVAS TENDENCIAS EN DISEÑO WEB</h1>
+    <div class="slider">
+      <div class="slider-track">
+        <span>Awwwards</span>
+        <div class="star"></div>
+        <span>Webby Awards</span>
+        <div class="star"></div>
+        <span>FWA</span>
+        <div class="star"></div>
+        <span>CSS Design Awards</span>
+        <div class="star"></div>
 
+        <!-- Repetición -->
+        <span>Awwwards</span>
+        <div class="star"></div>
+        <span>Webby Awards</span>
+        <div class="star"></div>
+        <span>FWA</span>
+        <div class="star"></div>
+        <span>CSS Design Awards</span>
+        <div class="star"></div>
+      </div>
+    </div>
     <!-- Análisis 1 -->
     <section class="analisis">
       <h2>Toshihito Endo</h2>
-      <div class="imagenes">
-        <img src="toshihito1.jpg" alt="Captura 1 de Toshihito Endo" />
-        <img src="toshihito2.jpg" alt="Captura 2 de Toshihito Endo" />
-      </div>
       <p>
         El portfolio del diseñador japonés Toshihito Endo propone una
         experiencia inmersiva que combina tecnología y naturaleza. Su diseño
@@ -78,6 +40,11 @@
         sus proyectos. El uso de animaciones, HTML estructurado y un CSS
         creativo aportan a una interfaz interactiva, envolvente y original.
       </p>
+      <div class="imagenes">
+        <img src="toshihito1.png" alt="Captura 1 de Toshihito Endo" />
+        <img src="toshihito2.png" alt="Captura 2 de Toshihito Endo" />
+        <img src="toshihito3.png" alt="Captura 3 de Toshihito Endo" />
+      </div>
       <a href="https://toshihito-endo.com/" target="_blank">Visitar web</a>
     </section>
 
@@ -85,8 +52,9 @@
     <section class="analisis">
       <h2>Siena – Taboo</h2>
       <div class="imagenes">
-        <img src="taboo1.jpg" alt="Captura 1 de Taboo" />
-        <img src="taboo2.jpg" alt="Captura 2 de Taboo" />
+        <img src="taboo1.png" alt="Captura 1 de Taboo" />
+        <img src="taboo2.png" alt="Captura 2 de Taboo" />
+        <img src="taboo3.png" alt="Captura 3 de Taboo" />
       </div>
       <p>
         Esta web combina potencia visual y storytelling, presentando el trabajo
@@ -104,8 +72,9 @@
     <section class="analisis">
       <h2>Marina Abramović – Tilda</h2>
       <div class="imagenes">
-        <img src="abramovic1.jpg" alt="Captura 1 de Abramović" />
-        <img src="abramovic2.jpg" alt="Captura 2 de Abramović" />
+        <img src="abramovic1.png" alt="Captura 1 de Abramović" />
+        <img src="abramovic2.png" alt="Captura 2 de Abramović" />
+        <img src="abramovic3.png" alt="Captura 3 de Abramović" />
       </div>
       <p>
         Esta página presenta el universo artístico de Marina Abramović como si
@@ -127,10 +96,8 @@
         <img src="otra2.jpg" alt="Captura 2 de otra web" />
       </div>
       <p>
-        Aquí puedes poner el análisis de otra web más. Siguiendo el mismo
-        estilo: un diseño innovador, atractivo, funcional, que represente alguna
-        tendencia de diseño web actual como scroll dinámico, interactividad,
-        tipografía creativa, minimalismo o brutalismo web.
+        AQUI VOY A PONER MUCHAS COSAS DISTINTAS PORQUE RELAMENTE NO SE QUE
+        HACER, ESTO ES OSLO PARA PROBARLE TEMA DEL REPOSITORIO
       </p>
       <a href="https://ejemplo.com" target="_blank">Visitar web</a>
     </section>
