uno poco mas avanzado

--- a/index.html
+++ b/index.html
@@ -34,12 +34,36 @@
     <section class="analisis">
       <h2>Toshihito Endo</h2>
       <p>
-        El portfolio del diseñador japonés Toshihito Endo propone una
-        experiencia inmersiva que combina tecnología y naturaleza. Su diseño
-        simula el mapa de un videojuego en el que el usuario avanza descubriendo
-        sus proyectos. El uso de animaciones, HTML estructurado y un CSS
-        creativo aportan a una interfaz interactiva, envolvente y original.
+        La web funciona como un portfolio digital del artista y diseñador 3D
+        japonés Toshihito Endo. Se presenta como una experiencia interactiva,
+        donde el usuario navega horizontalmente como si explorarase un mapa, en
+        un entorno que recuerda a un videojuego. Este enfoque no solo muestra
+        sus habilidades técnicas, sino también su visión creativa.
       </p>
+      <p>
+        El diseño eslimpio, minimalista y conceptual. La paleta de colores, los
+        sonidos y las animaciones crean una experiencia envolvente que transmite
+        la identidad del artista. Es un ejemplo de cómo un portafolio puede ser
+        también una obra personal.
+      </p>
+      <p>
+        La navegación con scroll horizontal mediante teclas es original, pero
+        puede resultar confusa. La falta de referencias visuales y estructura
+        clara puede dificultar la orientación, sobre todo para usuarios poco
+        familiarizados con este tipo de interacción.
+      </p>
+      <p>
+        En óviles, el sitio se adapta bien, aunque pierde parte del estilo de
+        "videojuego". Aun así, prioriza la funcionalidad, lo cual es acertado,
+        ya que esa interacción sería difícil de replicar en pantallas pequeñas.
+      </p>
+      <p>
+        El diseño, aunque atractivo, no es del todo accesible: faltan textos
+        alternativos, hay contrastes mejorables y la navegación no es del todo
+        intuitiva para personas con diversidad funcional. Una versión más
+        accesible podría ampliar su alcance.
+      </p>
+
       <div class="imagenes">
         <img src="toshihito1.png" alt="Captura 1 de Toshihito Endo" />
         <img src="toshihito2.png" alt="Captura 2 de Toshihito Endo" />
@@ -50,19 +74,47 @@
 
     <!-- Análisis 2 -->
     <section class="analisis">
-      <h2>Siena – Taboo</h2>
+      <h2>Siena Films</h2>
+      <p>
+        La web funciona como escaparate creativo para Siena, una casa productora
+        y estudio audiovisual. Se presenta como una experiencia visual
+        impactante, con una navegación fluida y animaciones sutiles que
+        refuerzan el carácter cinematográfico del sitio. El enfoque busca
+        transmitir no solo los proyectos realizados, sino también la identidad
+        visual y sensibilidad artística del estudio.
+      </p>
+      <p>
+        El diseño es limpio, elegante y moderno. Consta de una estética sobria,
+        basada en el uso del blanco y negro, tipografía fina y transiciones
+        suaves que aportan una sensación profesional y cuidada. Las imágenes en
+        alta calidad, bien seleccionadas, refuerzan el estilo visual de Siena y
+        dejan ver el estándar de sus producciones.
+      </p>
+      <p>
+        La navegación es vertical, excepto en un punto que es horizontal, el
+        scroll es suave, lo que crea una experiencia inmersiva sin llegar a ser
+        confusa. La estructura está bien definida, además la jerarquía es clara
+        lo que facilita la orientación dentro del sitio, aunque en algunos
+        momentos ciertas interacciones no son del todo evidentes.
+      </p>
+      <p>
+        En dispositivos móviles, el sitio se adapta correctamente. Las
+        transiciones y contenidos se mantienen fluidos. Se mantiene acordce a
+        como aparece en dispositivos más grandes como ordenadores. Aun así, se
+        prioriza la legibilidad y el contenido visual, algo esencial en una web
+        de este tipo.
+      </p>
+      <p>
+        En términos de accesibilidad, genralmente está bien aqune presenta
+        algunas limitaciones: faltan textos alternativos y algunos elementos
+        interactivos podrían estar mejor optimizadops. El contraste de color es
+        adecuado.
+      </p>
       <div class="imagenes">
         <img src="taboo1.png" alt="Captura 1 de Taboo" />
         <img src="taboo2.png" alt="Captura 2 de Taboo" />
         <img src="taboo3.png" alt="Captura 3 de Taboo" />
       </div>
-      <p>
-        Esta web combina potencia visual y storytelling, presentando el trabajo
-        de producción audiovisual de forma cinematográfica. El diseño destaca
-        por su impacto visual, uso del color y animaciones al scrollear. La
-        organización de los contenidos y la navegación refuerzan la identidad de
-        marca.
-      </p>
       <a href="https://www.siena.film/films/taboo" target="_blank"
         >Visitar web</a
       >
@@ -71,18 +123,49 @@
     <!-- Análisis 3 -->
     <section class="analisis">
       <h2>Marina Abramović – Tilda</h2>
+      <p>
+        Esta web funciona en forma de homenaje a una de las artistas de
+        performance más influyente, Marina Abramović, El contenido se enfoca en
+        su trayectoria artística, con un recorrido visual y textual que
+        introduce su obra, sus ideas clave y algunos de sus trabajos más
+        conocidos. ES un proyecto de divulgación realizados con una plataforma
+        para realizar webs llamado "Tilda".
+      </p>
+      <p>
+        El diseño es sencillo, limpio y directo. Predomina el fondo claro con
+        texto oscuro, y las imágenes de Marina en blanco y negro o color sutil
+        destacan dentro del espacio. La estética general transmite seriedad y
+        respeto hacia la figura de la artista. El uso de tipografía sin serifas
+        y márgenes amplios da una sensación de orden y ligereza. Al tener una
+        estética general limpia da mucho enfasis a la información y las
+        animaciones que acompañan a esta.
+      </p>
+      <p>
+        La navegación es vertical y clásica, con scroll tradicional, lo que hace
+        que la experiencia sea accesible y clara. Aunque las animaciones hacen
+        lucir la página más profesional. Cada bloque de contenido está bien
+        separado, con imágenes acompañando los textos. Es una web ideal para
+        conocer el trabajo de la artista. Sin embargo, algo a mejorar sería el
+        acceso a las distintas secciones. Al ser una "one page", tienes que
+        recorrer toda la página para llegar a los distintos apartados. Se
+        podrían incluir enlaces internos que pudiesen llevarnos a las distintas
+        secciones.
+      </p>
+      <p>
+        La web se adapta bien a móviles. Todo se distribuye y organiza de manera
+        responsiva. Y el uso y la navegación es igual en todos los tipos de
+        dispositivos, por lo que la experiencia en móvil es funcional y clara.
+      </p>
+      <p>
+        En general la accesibilidad es adecuada, aunque siempre hay maneras de
+        poder mejorarla.
+      </p>
+
       <div class="imagenes">
         <img src="abramovic1.png" alt="Captura 1 de Abramović" />
         <img src="abramovic2.png" alt="Captura 2 de Abramović" />
         <img src="abramovic3.png" alt="Captura 3 de Abramović" />
       </div>
-      <p>
-        Esta página presenta el universo artístico de Marina Abramović como si
-        fuese una pieza de performance digital. Visualmente intensa y
-        minimalista, guía al usuario por su obra a través de una narrativa
-        lineal. El diseño aprovecha las herramientas de Tilda para crear una web
-        que es más instalación que portafolio.
-      </p>
       <a href="https://marinaabramovic.tilda.ws/" target="_blank"
         >Visitar web</a
       >
@@ -90,7 +173,7 @@
 
     <!-- Análisis 4 -->
     <section class="analisis">
-      <h2>[Nombre de otra web]</h2>
+      <h2>[Andre Bato Corp]</h2>
       <div class="imagenes">
         <img src="otra1.jpg" alt="Captura 1 de otra web" />
         <img src="otra2.jpg" alt="Captura 2 de otra web" />
