--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>NUEVAS TENDENCIAS EN DISEÑO WEB</h1>
+    <h3>Ariadna González Ortiz - Diseño Multimedia y Gráfico 2.1</h3>
     <div class="slider">
       <div class="slider-track">
         <span>Awwwards</span>
@@ -173,16 +174,54 @@
 
     <!-- Análisis 4 -->
     <section class="analisis">
-      <h2>[Andre Bato Corp]</h2>
-      <div class="imagenes">
-        <img src="otra1.jpg" alt="Captura 1 de otra web" />
-        <img src="otra2.jpg" alt="Captura 2 de otra web" />
-      </div>
+      <h2>Andre Bato Corp</h2>
       <p>
-        AQUI VOY A PONER MUCHAS COSAS DISTINTAS PORQUE RELAMENTE NO SE QUE
-        HACER, ESTO ES OSLO PARA PROBARLE TEMA DEL REPOSITORIO
+        Esta web sirve como plataforma oficial de Andre Bato Corp, una empresa
+        de producción y estudio creativo con sede en Nueva York. En ella
+        encontramos diferentes proyectos de distintos directores creativos.
       </p>
-      <a href="https://ejemplo.com" target="_blank">Visitar web</a>
+      <p>
+        El diseño del sitio es minimalista y moderno, utilizando una paleta de
+        colores monocromática que la hace lucir elegante y profesional. La
+        tipografía es limpia y las imágenes se presentan de manera destacada,
+        reflejando la identidad visual de la empresa. Sin embargo, la página
+        principal carece de infromación lo que puede dificultar la navegación el
+        usuario.
+      </p>
+      <p>
+        La navegación se basa en un menú principal que incluye enlaces a
+        secciones clave como "Films", "Directors", "Studio", "Market" e
+        "Information". Como ya he dicho de primeras es un poco dificil intuir
+        donde vamos a encontrar el acceso a estas secciones lo que puede
+        resultar desconcertante para los visitantes que buscan información sobre
+        la empresa.
+      </p>
+      <p>
+        El sitio es responsivo, adaptándose adecuadamente a diferentes tamaños
+        de pantalla y dispositivos móviles. La navegación y el diseño se
+        mantienen coherentes en los distintos dispositivos, asegurando una
+        experiencia de usuario adecuada.
+      </p>
+      <p>
+        El diseño minimalista contribuye a una buena legibilidad, en general
+        considero que la accesibilidad es adecuada, aunque tal vez mejoraría si
+        se aumentase un poco el tamaño del texto.
+      </p>
+
+      <div class="imagenes">
+        <img src="andre1.png" alt="Captura 1 de Andre" />
+        <img src="andre2.png" alt="Captura 2 de Andere" />
+        <img src="andre3.png" alt="Captura 3 de Andre" />
+      </div>
+      <a href="https://www.andrebato.com/" target="_blank">Visitar web</a>
     </section>
   </body>
+  <footer>
+    <p>
+      Creado por Ariadna ·
+      <a href="https://github.com/AriGonzalez05/ANALISISWEB" target="_blank"
+        >Ver código en GitHub</a
+      >
+    </p>
+  </footer>
 </html>
